--- a/index.html
+++ b/index.html
@@ -94,7 +94,37 @@
                           </div>
                </div>
                <div class="col-md-9">
-
+                    <div class="panel panel-default">
+                            <div class="panel-heading main-color-bg">
+                              <h3 class="panel-title">Website Overview</h3>
+                            </div>
+                            <div class="panel-body">
+                              <div class="col-md-3">
+                                  <div class="well dash-box">
+                                      <h2><span class="glyphicon glyphicon-user" aria-hidden="true"> </span> 203 </h2>
+                                      <h4>Users</h4>
+                                  </div>
+                              </div>
+                              <div class="col-md-3">
+                                    <div class="well dash-box">
+                                        <h2><span class="glyphicon glyphicon-list-alt" aria-hidden="true"> </span> 12 </h2>
+                                        <h4>Pages</h4>
+                                    </div>
+                                </div>
+                                <div class="col-md-3">
+                                        <div class="well dash-box">
+                                            <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"> </span> 33 </h2>
+                                            <h4>Posts</h4>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                            <div class="well dash-box">
+                                                <h2><span class="glyphicon glyphicon-stats" aria-hidden="true"> </span> 12,333 </h2>
+                                                <h4>Visitors</h4>
+                                            </div>
+                                        </div>
+                            </div>
+                          </div>
                </div>
            </div>
        </div>
