--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Admin Area | Dashboard</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -23,12 +24,7 @@
           <a class="navbar-brand" href="#">Swahili Foods</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Dashboard</a></li>
-            <li><a href="pages.html">Pages</a></li>
-            <li><a href="posts.html">Posts</a></li>
-            <li><a href="users.html">Users</a></li>
-          </ul>
+
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Welcome, Clint</a></li>
             <li><a href="login.html">Logout</a></li>
@@ -49,9 +45,8 @@
                                   <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                  <li><a href="#">Add Page</a></li>
-                                  <li><a href="#">Add Post</a></li>
-                                  <li><a href="#">Add User</a></li>
+                                  <li><a type="button" data-toggle="modal" data-target="#addPage">Add Recipe(s)</a></li>                                  
+                                  <li><a href="#">Add User(s)</a></li>
                                 </ul>
                               </div>
                 </div>
@@ -74,8 +69,7 @@
                             <a href="index.html" class="list-group-item active main-color-bg">
                                     <span class="glyphicon glyphicon-cog" aria-hidden="true"> </span> Dashboard
                             </a>
-                            <a href="pages.html" class="list-group-item"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"> </span> Pages <span class="badge">12</span></a>
-                            <a href="posts.html" class="list-group-item"><span class="glyphicon glyphicon-pencil" aria-hidden="true"> </span> Posts <span class="badge">33</span></a>
+                            <a href="recipe.html" class="list-group-item"><span class="glyphicon glyphicon-cutlery" aria-hidden="true"> </span> Recipes <span class="badge">33</span></a>
                             <a href="users.html" class="list-group-item"><span class="glyphicon glyphicon-user" aria-hidden="true"> </span> Users <span class="badge">203</span></a>
                           </div>
                           <div class="well">
@@ -96,39 +90,166 @@
                <div class="col-md-9">
                     <div class="panel panel-default">
                             <div class="panel-heading main-color-bg">
-                              <h3 class="panel-title">Website Overview</h3>
+                              <h3 class="panel-title"> <strong> App Overview </strong> </h3>
                             </div>
                             <div class="panel-body">
-                              <div class="col-md-3">
-                                  <div class="well dash-box">
-                                      <h2><span class="glyphicon glyphicon-user" aria-hidden="true"> </span> 203 </h2>
-                                      <h4>Users</h4>
-                                  </div>
-                              </div>
-                              <div class="col-md-3">
-                                    <div class="well dash-box">
-                                        <h2><span class="glyphicon glyphicon-list-alt" aria-hidden="true"> </span> 12 </h2>
-                                        <h4>Pages</h4>
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
+
+                                <div class="col-md-6">
                                         <div class="well dash-box">
-                                            <h2><span class="glyphicon glyphicon-pencil" aria-hidden="true"> </span> 33 </h2>
-                                            <h4>Posts</h4>
+                                            <h2><span class="glyphicon glyphicon-cutlery" aria-hidden="true"> </span> 33 </h2>
+                                            <h4>Recipes</h4>
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
+                                    <div class="col-md-6">
                                             <div class="well dash-box">
-                                                <h2><span class="glyphicon glyphicon-stats" aria-hidden="true"> </span> 12,333 </h2>
-                                                <h4>Visitors</h4>
+                                                <h2><span class="glyphicon glyphicon-user" aria-hidden="true"> </span> 12,333 </h2>
+                                                <h4>Users</h4>
                                             </div>
                                         </div>
                             </div>
                           </div>
+                          
+                          <!-- Latest Users-->
+                          <div class="panel panel-default">
+                                <div class="panel-heading">
+                                  <h3 class="panel-title">Latest Users</h3>
+                                </div>
+                                <div class="panel-body">
+                                  <table class="table table-striped table-hover">
+                                      <tr>
+                                        <th>Name</th>
+                                        <th>Email</th>
+                                        <th>Joined</th>
+                                      </tr>
+                                      <tr>
+                                        <td>Jill Smith</td>
+                                        <td>jillsmith@gmail.com</td>
+                                        <td>Dec 12, 2016</td>
+                                      </tr>
+                                      <tr>
+                                        <td>Eve Jackson</td>
+                                        <td>ejackson@yahoo.com</td>
+                                        <td>Dec 13, 2016</td>
+                                      </tr>
+                                      <tr>
+                                        <td>John Doe</td>
+                                        <td>jdoe@gmail.com</td>
+                                        <td>Dec 13, 2016</td>
+                                      </tr>
+                                      <tr>
+                                        <td>Stephanie Landon</td>
+                                        <td>landon@yahoo.com</td>
+                                        <td>Dec 14, 2016</td>
+                                      </tr>
+                                      <tr>
+                                        <td>Mike Johnson</td>
+                                        <td>mjohnson@gmail.com</td>
+                                        <td>Dec 15, 2016</td>
+                                      </tr>
+                                    </table>
+                                </div>
+                              </div>
+
+                          <!-- Latest Recipes-->
+                          <div class="panel panel-default">
+                                <div class="panel-heading">
+                                  <h3 class="panel-title">Latest Recipes</h3>
+                                </div>
+                                <div class="panel-body">
+                                  <table class="table table-striped table-hover">
+                                      <tr>
+                                        <th>Title</th>
+                                        <th>Author</th>
+                                        <th>Date Created</th>
+                                      </tr>
+                                      <tr>
+                                        <td>Pilau</td>
+                                        <td>Cheff Gusto Graziolli</td>
+                                        <td>Dec 12, 2016</td>
+                                      </tr>
+                                      <tr>
+                                        <td>Birihani</td>
+                                        <td>Cheff Otta Chris</td>
+                                        <td>Dec 13, 2016</td>
+                                      </tr>
+                                      <tr>
+                                        <td>Mahamri</td>
+                                        <td>Cheff Mitch Gelani</td>
+                                        <td>Dec 13, 2016</td>
+                                      </tr>
+                                      <tr>
+                                        <td>Viazi Tamu</td>
+                                        <td>Ali Hassan Issa</td>
+                                        <td>Dec 14, 2016</td>
+                                      </tr>
+                                      <tr>
+                                        <td>Halua</td>
+                                        <td>Hadija Ali Hussein</td>
+                                        <td>Dec 15, 2016</td>
+                                      </tr>
+                                    </table>
+                                </div>
+                              </div>                              
                </div>
            </div>
        </div>
    </section>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-</html>
+   
+   <footer id="footer">
+        <p>Copyright Clima Creatives, &copy; 2019</p>
+      </footer>
+  
+      <!-- Modals -->
+  
+      <!-- Add Page -->
+      <div class="modal fade" id="addPage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <form>
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">Add Page</h4>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label>Page Title</label>
+            <input type="text" class="form-control" placeholder="Page Title">
+          </div>
+          <div class="form-group">
+            <label>Page Body</label>
+            <textarea name="editor1" class="form-control" placeholder="Page Body"></textarea>
+          </div>
+          <div class="checkbox">
+            <label>
+              <input type="checkbox"> Published
+            </label>
+          </div>
+          <div class="form-group">
+            <label>Meta Tags</label>
+            <input type="text" class="form-control" placeholder="Add Some Tags...">
+          </div>
+          <div class="form-group">
+            <label>Meta Description</label>
+            <input type="text" class="form-control" placeholder="Add Meta Description...">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Save changes</button>
+        </div>
+      </form>
+      </div>
+    </div>
+  </div>
+  
+    <script>
+       CKEDITOR.replace( 'editor1' );
+   </script>
+  
+      <!-- Bootstrap core JavaScript
+      ================================================== -->
+      <!-- Placed at the end of the document so the pages load faster -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+    </body>
+  </html>
